--- a/sedeutn/css/agency.css
+++ b/sedeutn/css/agency.css
@@ -226,7 +226,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/01_HPP-ASTOC_HRW_35547_Lachenmaier.jpg');
+  background-image: url('../img/header.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
