--- a/construccion/css/style.css
+++ b/construccion/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #bg {
-    background-image: url('https://cdn3-www.musicfeeds.com.au/assets/uploads/gallery/a8398a559919760fd0d39db1723f2cd8/EdSheeran17.jpg');
+    background-image: url('');
     -moz-background-size: auto 100%;
     -o-background-size: auto 100%;
     -webkit-background-size: auto 100%; 
@@ -63,7 +63,7 @@ body {
 
 .tagcontainer{
     width: 100%;
-    height: 450px;
+    height: 100%;
     top: 0px;
     left: 0px;
     position: absolute;
