--- a/construccion/css/style.css
+++ b/construccion/css/style.css
@@ -22,7 +22,7 @@ body {
     background-repeat: no-repeat;
     background-position: 15% 0%;
     width: 100%;
-    height: 450px;
+    height: 100%;
     position: relative;
     left: 0px;
     top: 0px;
