--- a/construccion/css/style.css
+++ b/construccion/css/style.css
@@ -18,7 +18,7 @@ body {
     -o-background-size: auto 100%;
     -webkit-background-size: auto 100%; 
     background-size: auto 100%;
-    background-color: #000;
+    background-color: #FFF;
     background-repeat: no-repeat;
     background-position: 15% 0%;
     width: 100%;
@@ -56,7 +56,7 @@ body {
     margin-left: 55%;
     margin-top: auto;
     margin-bottom: auto;
-    color: #FFF;
+    color: #000;
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5em;
 }
